[25] JEP 512 - Compact Source Files
Make the feature non-preview